v0.7.5
- Change internet check

v0.7.4
- Always trace clock

v0.7.3
- Pause idle bug fix

v0.7.2
- Fix sleep timings

v0.7.1
- Delay sleep idle for 5 minutes after boot
- Check internet connectivity before syncing clock (which what should be a correct time)
- Check button setting before updating button script

v0.7.0
- Pause idle stopping
- Sleep idle

v0.6.3
- Linux clock sync on DST and boot

v0.6.2
- Linux clock sync fix

v0.6.1
- Clock brightness support

V0.6.0
- Arduino USB clock support

v0.5.0
- Raspberry Pi button support

v0.4.3
- Add more Trakt support

v0.4.2
- Manage action log pruning
- Setting to enable/disable action log

v0.4.1
- Sleep timer fixes
- Separate action log

v0.4.0
- Fix settings

v0.3.9
- Periodical timer fixes
- Retry rules download

v0.3.8
- More timer fixing...how difficult can it be...

v0.3.3
- General timer fixes
- Added auto sleep setting

v0.3.2
- More sleep timer fixes

v0.3.1
- Sleep timer fixes

v0.3.0
- Sleep timer

v0.2.0
- Optimize rules engine

v0.1.2
- Variable delay in rules engine
- Fix progress percent calculation

v0.1.1
- Trakt video addon reset bug fix

v0.1.0
- Commands driven by an external file

v0.0.16
- Emby cache clearing fix

v0.0.15
- Add command execution

v0.0.14
- Fix timer bug

v0.0.11
- Limit file and addon checking by time

v0.0.10
- Command delay bug fixes
- Better dialogs

v0.0.9
- Support multiple add-ons with add-on trigger

v0.0.8
- Playback bug fixes
- Trakt bug fixes

v0.0.7
- Settings bug fixes

v0.0.6
- Playback bug fixes
- Emby support
- Some settings modifications

v0.0.5
- Setings bug fixes
- Trakt ID and secret modification support

v0.0.4
- VPN support

v0.0.3
- Add-on and file change triggers

v0.0.2
- Rework to allow multiple timers
- Add cache clearing

v0.0.1
- Initial version
- Limit playlist playback